@startuml
title Diagramme de classes - Sprint 5 : Dashboards et reporting

skinparam backgroundColor #FFFFFF
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam dpi 180
skinparam nodesep 80
skinparam ranksep 90
skinparam defaultFontSize 16

skinparam class {
  BackgroundColor #E8F4F8
  BorderColor #0078D4
  ArrowColor #0078D4
  FontColor #000000
  FontSize 15
}

left to right direction

class User {
  + id : int
  + prenom : string
  + nom : string
  + email : string
  + role : string
  --
  + inscriptions()
  + formations()
}

class Formation {
  + id : int
  + titre : string
  + categorie : string
  + niveau : string
  + statut : string
  --
  + formateur()
  + inscriptions()
}

class Inscription {
  + id : int
  + user_id : int
  + formation_id : int
  + date_inscription : datetime
  --
  + user()
  + formation()
}

class ProgressionFormation {
  + id : int
  + user_id : int
  + formation_id : int
  + pourcentage_global : int
  + complete : boolean
  --
  + user()
  + formation()
}

class TempsApprentissage {
  + id : int
  + user_id : int
  + formation_id : int
  + duree_secondes : int
  --
  + user()
  + formation()
}

class Certificat {
  + id : int
  + numero : string
  + user_id : int
  + formation_id : int
  + moyenne : float
  + mention : string
  --
  + user()
  + formation()
}

class ReponseApprenant {
  + id : int
  + score_ia : float
  + feedback_ia : text
  + points_obtenus : float
  --
  + tentative()
  + question()
}

class DashboardController <<controller>> {
  + apprenantStats() : array
  + mesFormations() : array
  + inscriptionsParSemaine() : array
  + usersStats() : array
  + topFormations() : array
  + tempsApprentissage() : array
  + iaStats() : array
  + certificationsStats() : array
}

User "1" -- "0..*" Inscription : possède
Formation "1" -- "0..*" Inscription : reçoit

User "1" -- "0..*" ProgressionFormation : suit
Formation "1" -- "0..*" ProgressionFormation : mesure

User "1" -- "0..*" TempsApprentissage : consacre
Formation "1" -- "0..*" TempsApprentissage : cumule

User "1" -- "0..*" Certificat : obtient
Formation "1" -- "0..*" Certificat : délivre

DashboardController ..> User : utilisateurs
DashboardController ..> Formation : formations
DashboardController ..> Inscription : inscriptions
DashboardController ..> ProgressionFormation : progression
DashboardController ..> TempsApprentissage : temps
DashboardController ..> Certificat : certifications
DashboardController ..> ReponseApprenant : statistiques IA

User -[hidden]right- Formation
Formation -[hidden]right- DashboardController

Inscription -[hidden]right- ProgressionFormation
ProgressionFormation -[hidden]right- TempsApprentissage
TempsApprentissage -[hidden]right- Certificat
Certificat -[hidden]right- ReponseApprenant

@enduml